# naver_news

./: LICENSE  items.py  pyproject.toml  readme.md  scrapy.cfg  settings.py  spiders.py  utils.py
.github/workflows/: test.yml
spiders/: EntSpider.py  LSDSpider.py  NewsSpider.py  SportSpider.py
src/: settings.py  spiders.py  utils.py
tests/: test_spider.py  test_utils.py
